--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+  font:'Poppins' sans-serif;  
+}
+.font-poppins {
+  font-family: 'Poppins', sans-serif; /* Apply Poppins font to all text within .font-poppins */
+}
+
+/* styles.css */
+.scroll-to-top {
+  position: fixed;
+  bottom: 40px;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  background-color: #121212;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 0.4s ease-in-out;
+}
+
+.scroll-to-top.dark{
+  background-color: white;
+  color: #121212
+}
+
+.scroll-to-top.show {
+  opacity: 1;
+}
+
+@keyframes wavering {
+  0%, 100% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(2deg);
+  }
+  50% {
+    transform: rotate(-2deg);
+  }
+  75% {
+    transform: rotate(4deg);
+  }
+}
+
+.wavering-hover:hover {
+  animation: wavering 0.5s ease-in-out ;
+}
