--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,22 @@ body{
 .wavering-hover:hover {
   animation: wavering 0.5s ease-in-out ;
 }
+
+@keyframes text-animate {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  50% {
+    opacity: 0.5;
+    transform: scale(1.05);
+  }
+  100% {
+    opacity: 1.5;
+    transform: scale(1);
+  }
+}
+
+.text-animate {
+  animation: text-animate 2s ease-in-out;
+}
