--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,6 +10,10 @@ body {
 
 .font-poppins {
   font-family: 'Poppins', sans-serif;
+}
+
+.font-roboto {
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .scroll-to-top {
@@ -73,7 +78,7 @@ body {
 }
 
 .text-animate {
-  animation: text-animate 7s ease-in-out ;
+  animation: text-animate 3s ease-in-out ;
 }
 
 .text-image {
